# InormationManagement-project

./: .env  .gitignore  Firstrun.py  HistoryMaker.sh  LOGBOOKs.md  LogBook.md  README.md  READMEfutur.md  app.py  main.py  peper.odt  pyproject.toml  users.py
lib/: athletes.py  clean_graphs.py  connect_db.py  goals.py  graphs.py  nutrition.py  recovery.py  terminal.py  training.py
sqlqueries/: A.sql  Diagram.mmd  Init.sql  demo.sql
static/: addentry.js  graph_viewer.js  style.css  stylebackup.css
templates/: add_athlete.html  athlete.html  athlete_list.html  edit.html  edit_goals.html  edit_goals_single.html  edit_nutrition.html  edit_nutrition_single.html  edit_recovery.html  edit_recovery_single.html  edit_training.html  edit_training_single.html  error404.html  index.html  login.html  signup.html
templates/partials/: athlete_items.html  devteam.html  navbar.html
